--- a/MusicLibraryApp/src/main/webapp/css/demo.css
+++ b/MusicLibraryApp/src/main/webapp/css/demo.css
@@ -111,3 +111,8 @@ body{
 .tz-link span{
 	color: #da431c;
 }
+
+#playlist,audio{background:#666;width:400px;padding:20px;}
+.active a{color:#5DB0E6;text-decoration:none;}
+li a{color:#eeeedd;background:#333;padding:5px;display:block;}
+li a:hover{text-decoration:none;}
