--- a/MusicLibraryApp/src/main/webapp/css/demo.css
+++ b/MusicLibraryApp/src/main/webapp/css/demo.css
@@ -112,7 +112,7 @@ body{
 	color: #da431c;
 }
 
-#playlist,audio,allaudio,allplaylist{background:#666;width:400px;padding:20px;}
+#playlist,audio,allaudio,allplaylist,searchplaylist,searchaudio{background:#666;width:400px;padding:20px;}
 .active a{color:#5DB0E6;text-decoration:none;}
 li a{color:#eeeedd;background:#333;padding:5px;display:block;}
 li a:hover{text-decoration:none;}
