--- a/MusicLibraryApp/src/main/webapp/css/demo.css
+++ b/MusicLibraryApp/src/main/webapp/css/demo.css
@@ -116,3 +116,8 @@ body{
 .active a{color:#5DB0E6;text-decoration:none;}
 li a{color:#eeeedd;background:#333;padding:5px;display:block;}
 li a:hover{text-decoration:none;}
+
+.ui-autocomplete { border: 1px solid #999; background: #FFF; overflow: auto; }
+.autocomplete-suggestion { padding: 5px 5px; white-space: nowrap; overflow: hidden; font-size:22px}
+.ui-menu-item-wrapper { background: #F0F0F0; }
+.autocomplete-suggestions strong { font-weight: bold; color: #3399FF; }
